<resources>
    <string name="app_name">Student 20 PoP</string>

    <!-- Top Tabs -->
    <string name="tab_home">Home</string>
    <string name="tab_connect">Connect</string>
    <string name="tab_launch">Launch</string>
    <string name="tab_identity">Identity</string>
    <string name="tab_properties">Show/Hide Properties</string>

    <!-- Home -->
    <string name="text_title_welcome">Welcome to Personhood.Online!</string>
    <string name="text_body_welcome">\n\n To connect to a local organization (LAO), please tap Connect above. \n\n To
...

    <!-- Abstract Event-->
    <string name="start_date_required">Start Date*</string>
    <string name="start_time_required">Start Time*</string>
    <string name="end_date_optional">End Date</string>
    <string name="location_optional">Location</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="past_date_not_allowed">Event has to start/end today or in the future</string>
    <string name="end_date_after_start_date_not_allowed">End date has to be after or the same day as the start date
    </string>
    <string name="start_date_after_end_date_not_allowed">Start date must be before or the same day as end date</string>
    <string name="start_time_after_end_time_not_allowed">Start time must be before end time</string>
...
