...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:labelFor="@id/LAO_Name_election_display"
            android:text="@string/lao_name"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/Elections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Elections">

            <ListView
                android:id="@+id/lao_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_button"
                android:layout_marginRight="@dimen/margin_button"
                android:divider="@color/white"
                android:dividerHeight="@dimen/margin_top" />
...
