<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/fragment_meeting_event_creation"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <include
    layout="@layout/tab_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <include
    layout="@layout/tab_connect_launch"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="@dimen/guideline_horizontal_tab" />

  <LinearLayout
    android:id="@+id/meeting_event_creation_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toBottomOf="@id/guideline_horizontal">

    <TextView
      android:id="@+id/meeting_event_creation_title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/create_meeting_event"
      android:textSize="@dimen/size_title"
      android:textStyle="bold" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/meeting_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toBottomOf="@id/meeting_event_creation_title">

    <EditText
      android:id="@+id/meeting_title_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/meeting_title_required"
      android:inputType="text"
      android:autofillHints="false" />
  </LinearLayout>


  <include
    layout="@layout/layout_enter_date"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constrainedHeight="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/meeting_title" />

  <include
    layout="@layout/layout_enter_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constrainedHeight="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/date" />

  <LinearLayout
    android:id="@+id/meeting_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    app:layout_constrainedHeight="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/time">

    <EditText
      android:id="@+id/meeting_event_location_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/location_optional"
      android:inputType="text"
      android:autofillHints="false" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/meeting_event_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    app:layout_constrainedHeight="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/meeting_location">

    <EditText
      android:id="@+id/meeting_event_description_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="start"
      android:hint="@string/event_description"
      android:inputType="textMultiLine"
      android:maxLines="10"
      android:autofillHints="false" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/meeting_event_creation_confirm_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <Button
      android:id="@+id/meeting_event_creation_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel"
      style="@style/Theme.AppCompat" />

    <Button
      android:id="@+id/meeting_event_creation_confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:text="@string/confirm"
      style="@style/Theme.AppCompat" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>