<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/time"
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content">

<EditText
    android:id="@+id/start_time_editText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="false"
    android:hint="@string/start_time_required"
    />

<EditText
    android:id="@+id/end_time_editText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="false"
    android:hint="@string/end_time_optional" />

</LinearLayout>